rawcdn.githack.com

--- a/Xenforo/index.html
+++ b/Xenforo/index.html
@@ -19,15 +19,15 @@
 
     <link rel="shortcut icon" href="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.png" />
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="ccgen_style.css" />
-    <link href="geosans.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/OshekharO/CC-GEN/f928805e2420ebe89eaabde78039aef08f2c1feb/Xenforo/css/ccgen_style.css" />
+    <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/OshekharO/CC-GEN/f928805e2420ebe89eaabde78039aef08f2c1feb/Xenforo/css/Responsive_ads.css">
+    <link href="https://rawcdn.githack.com/OshekharO/CC-GEN/f928805e2420ebe89eaabde78039aef08f2c1feb/Xenforo/css/geosans.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/fa8e56120a.js"></script>
     <!-- js -->
-    <script type="text/javascript" src="/js/jquery-1.11.2.min.js"></script>
-    <script type="text/javascript" src="/js/ccgen_eng.js"></script>
-    <script type="text/javascript" src="/js/small.js"></script>
+    <script type="text/javascript" src="https://rawcdn.githack.com/OshekharO/CC-GEN/f928805e2420ebe89eaabde78039aef08f2c1feb/Xenforo/js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="https://rawcdn.githack.com/OshekharO/CC-GEN/f928805e2420ebe89eaabde78039aef08f2c1feb/Xenforo/js/ccgen_eng.js"></script>
   </head>
   <body onload="ccgen();">
     <header>
