--- a/Xenforo/index.html
+++ b/Xenforo/index.html
@@ -27,7 +27,7 @@
 <body onload="ccgen();">
   <header>
      
-     <section class="title"><img src="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.pn" alt="NamsoCCGen">XENFORO CC GEN</section>
+     <section class="title"><img src="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.png" alt="NamsoCCGen">XENFORO CC GEN</section>
    </header>
    <div align="center">
 	     <div class="principal"><br>
