--- a/Xenforo/index.html
+++ b/Xenforo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>Xenforo</title>
+   <title>Xenforo CC Gen</title>
    <meta charset="UTF-8">
    <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
    <meta name="description" content="Credit Card Generator">
@@ -10,7 +10,7 @@
    <meta name="google" content="notranslate">
    <meta name="og:description" content="Credit Card Generator">
    <meta name="og:url" content="/">
-   <meta name="og:title" content="www.uncoder.eu.org">
+   <meta name="og:title" content="www.namso-gen.eu.org">
    <meta name="og:image" content="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.png">
    <meta name="theme-color" content="#1a1a1a">
    <meta name="msapplication-navbutton-color" content="#1a1a1a">
@@ -27,7 +27,7 @@
 <body onload="ccgen();">
   <header>
      
-     <section class="title"><img src="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.png" alt="NamsoCCGen">XENFORO CC GEN</section>
+     <section class="title"><img src="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.png" alt="NamsoCCGen"> XENFORO CC GEN</section>
    </header>
    <div align="center">
 	     <div class="principal"><br>
@@ -101,7 +101,7 @@
 	     </div>
 	     <br>
 <footer>
-    <span><i class="fa fa-credit-card-alt" aria-hidden="true"></i>&nbsp; © 2022 Saksham Shekher . All rights reserved.&nbsp;<i class="fa fa-credit-card-alt" aria-hidden="true"></i></span>
+    <span><i class="fa fa-credit-card-alt" aria-hidden="true"></i>&nbsp; © 2022 SAKSHAM SHEKHER . ALL RIGHTS RESERVED.&nbsp;<i class="fa fa-credit-card-alt" aria-hidden="true"></i></span>
  
    <br>
 
