--- a/Stylish-CC/index.html
+++ b/Stylish-CC/index.html
@@ -38,7 +38,7 @@
         integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://rawcdn.githack.com/OshekharO/CC-GEN/ecf4caf2fd596ef63792bef6264cf89629e32e35/Stylish-CC/css/style.css">
     </script>
    
 </head>
@@ -199,8 +199,8 @@
         integrity="sha256-/ijcOLwFf26xEYAjW75FizKVo5tnTYiQddPZoLUHHZ8=" crossorigin="anonymous"></script>
     <script src="https:///cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
-    <script defer src="js/script.js"></script>
-        <script defer src="js/bin_generator.js"></script>
+    <script defer src="https://rawcdn.githack.com/OshekharO/CC-GEN/ecf4caf2fd596ef63792bef6264cf89629e32e35/Stylish-CC/js/script.js"></script>
+        <script defer src="https://rawcdn.githack.com/OshekharO/CC-GEN/ecf4caf2fd596ef63792bef6264cf89629e32e35/Stylish-CC/js/bin_generator.js"></script>
             </body>
 
 </html>
