--- a/Xenforo/index.html
+++ b/Xenforo/index.html
@@ -6,8 +6,8 @@
    <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
    <meta name="description" content="Credit Card Generator">
    <meta name="keywords" content="Namso, Namso Lite, ccgen, credit card generator, generator, cc, bin, credit, mastercard, visa, amex, discover, oshekher">
-   <meta name="author" content="0xN1">
-   <meta name="google" content="notranslate">
+   <meta name="author" content="Saksham Shekher">
+   <meta name="google" content="translate">
    <meta name="og:description" content="Credit Card Generator">
    <meta name="og:url" content="/">
    <meta name="og:title" content="www.namso-gen.eu.org">
