--- a/Stylish-CC/index.html
+++ b/Stylish-CC/index.html
@@ -14,6 +14,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="BIN Generator tool, new upgraded version instantly Generates valid random credit card numbers &amp; details like CCV.">
     <meta name="theme-color" content="#5A8DEE">
+    <meta name="keywords" content="Namso, Namso Lite, ccgen, credit card generator, generator, cc, bin, credit, mastercard, visa, amex, discover, oshekher">
+    <meta name="author" content="Saksham Shekher">
     <meta name="msapplication-navbutton-color" content="#5A8DEE">
     <meta name="apple-mobile-web-app-status-bar-style" content="#5A8DEE">
     <link rel="shortcut icon" href="https://rawcdn.githack.com/ANON5EC/Source-Bin-CC-GEN/1c53f80a8c845db45ff215cfd3243f7b7b2a2915/img/favicon.png">
