--- a/New Gen/index.html
+++ b/New Gen/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSEC Credit Cards Generator</title>
+    <title>Credit Cards Generator</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container my-5">
-        <h1 class="text-center mb-4">CSEC Credit Cards Generator</h1>
+        <h1 class="text-center mb-4">Credit Cards Generator</h1>
         <form>
             <div class="mb-3">
                 <label for="bin" class="form-label">BIN</label>
