--- a/New Gen/index.html
+++ b/New Gen/index.html
@@ -5,6 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credit Cards Generator</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <style>
+        .container {
+  background: linear-gradient(to right, #0F2027, #203A43, #2C5364);
+  padding: 30px;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0,0,0,0.4);
+}
+
+form {
+  background: rgba(255,255,255,0.3);
+  padding: 20px;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+label {
+  font-weight: bold;
+  color: white;
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
+}
+
+input[type=text], select {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  border-radius: 0;
+  color: white;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+input[type=text]:focus, select:focus {
+  outline: none;
+}
+
+textarea {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  border-radius: 0;
+  color: white;
+  margin-bottom: 20px;
+  padding: 10px;
+  resize: none;
+}
+
+.btn-primary {
+  background-color: white;
+  border: none;
+  border-radius: 20px;
+  color: #2C5364;
+  font-weight: bold;
+  padding: 10px 30px;
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #2C5364;
+  color: white;
+  cursor: pointer;
+}
+
+
+    </style>
 </head>
 <body>
     <div class="container my-5">
