--- a/New Gen/index.html
+++ b/New Gen/index.html
@@ -6,7 +6,7 @@
     <title>Credit Cards Generator</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <style>
-        .container {
+        .body {
   background: linear-gradient(to right, #0F2027, #203A43, #2C5364);
   padding: 30px;
   border-radius: 20px;
