--- a/New Gen/index.html
+++ b/New Gen/index.html
@@ -6,9 +6,7 @@
     <title>Credit Cards Generator</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <style>
-        .body {
-  background: linear-gradient(to right, #0F2027, #203A43, #2C5364);
-  padding: 30px;
+body {
   border-radius: 20px;
   box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 }
