--- a/New Gen/index.html
+++ b/New Gen/index.html
@@ -51,7 +51,7 @@ textarea {
 }
 
 .btn-primary {
-  background-color: white;
+  background-color: black;
   border: none;
   border-radius: 20px;
   color: #2C5364;
