--- a/New Gen/index.html
+++ b/New Gen/index.html
@@ -30,7 +30,7 @@ input[type=text], select {
   border: none;
   border-bottom: 1px solid white;
   border-radius: 0;
-  color: white;
+  color: black;
   margin-bottom: 20px;
   padding: 10px;
 }
@@ -54,7 +54,7 @@ textarea {
   background-color: black;
   border: none;
   border-radius: 20px;
-  color: #2C5364;
+  color: white;
   font-weight: bold;
   padding: 10px 30px;
   text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
