--- a/Xenforo/index.html
+++ b/Xenforo/index.html
@@ -19,7 +19,7 @@
   <meta property="og:url" content="https://uncoder.eu.org/cc-gen/" />
   <meta property="og:image" content="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.png" />
   <link rel="icon" href="https://img.icons8.com/external-filled-outline-satawat-anukul/100/000000/external-ecommerce-ecommercefilled-outline-filled-outline-satawat-anukul-29.png" />
-  <link rel="stylesheet" href="/css/ccgen_style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/OshekharO/CC-GEN@main/Xenforo/css/ccgen_style.css" />
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
  </head>
@@ -119,6 +119,6 @@
    </div>
   </main>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-  <script src="/js/ccgen_eng.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/OshekharO/CC-GEN@main/Xenforo/js/ccgen_eng.js"></script>
  </body>
 </html>
