--- a/Stylish-CC/index.html
+++ b/Stylish-CC/index.html
@@ -7,10 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BIN Generator CC - free fast random valid cards online tool.</title>
-    <link rel='dns-prefetch' href='http://cdnjs.cloudflare.com/' />
-    <link rel='dns-prefetch' href='http://googletagmanager.com/' />
-    <link rel='dns-prefetch' href='http://google-analytics.com/' />
-    <link rel='dns-prefetch' href='http://mc.yandex.ru/' />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="BIN Generator tool, new upgraded version instantly Generates valid random credit card numbers &amp; details like CCV.">
     <meta name="theme-color" content="#5A8DEE">
@@ -18,7 +14,7 @@
     <meta name="author" content="Saksham Shekher">
     <meta name="msapplication-navbutton-color" content="#5A8DEE">
     <meta name="apple-mobile-web-app-status-bar-style" content="#5A8DEE">
-    <link rel="shortcut icon" href="https://rawcdn.githack.com/ANON5EC/Source-Bin-CC-GEN/1c53f80a8c845db45ff215cfd3243f7b7b2a2915/img/favicon.png">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/ANON5EC/Source-Bin-CC-GEN@master/img/favicon.png">
     <meta name="robots" content="index, follow">
     <meta name="image" content="https://rawcdn.githack.com/ANON5EC/Source-Bin-CC-GEN/1c53f80a8c845db45ff215cfd3243f7b7b2a2915/img/sourcebincc_bin_generator.png">
     <meta itemprop="name" content="BIN Generator CC - free fast random valid cards online tool.">
@@ -27,11 +23,11 @@
     <meta name="twitter:card" content="BIN Generator tool, new upgraded version instantly Generates valid random credit card numbers &amp; details like CCV.">
     <meta name="twitter:title" content="BIN Generator CC - free fast random valid cards online tool.">
     <meta name="twitter:description" content="BIN Generator tool, new upgraded version instantly Generates valid random credit card numbers &amp; details like CCV.">
-    <meta name="twitter:image:src" content="https://rawcdn.githack.com/ANON5EC/Source-Bin-CC-GEN/1c53f80a8c845db45ff215cfd3243f7b7b2a2915/img/sourcebincc_bin_generator.png">
+    <meta name="twitter:image:src" content="https://cdn.jsdelivr.net/gh/ANON5EC/Source-Bin-CC-GEN@master/img/sourcebincc_bin_generator.png">
     <meta name="twitter:image:alt" content="BIN Generator CC - free fast random valid cards online tool.">
     <meta name="og:title" content="BIN Generator CC - free fast random valid cards online tool.">
     <meta name="og:description" content="BIN Generator tool, new upgraded version instantly Generates valid random credit card numbers &amp; details like CCV.">
-    <meta name="og:image" content="https://rawcdn.githack.com/ANON5EC/Source-Bin-CC-GEN/1c53f80a8c845db45ff215cfd3243f7b7b2a2915/img/sourcebincc_bin_generator.png">
+    <meta name="og:image" content="https://cdn.jsdelivr.net/gh/ANON5EC/Source-Bin-CC-GEN@master/img/sourcebincc_bin_generator.png">
     <meta name="og:type" content="website">
     <meta name="og:site_name" content="SourceBINcc">
     <meta name="og:url" content="ccgen.html">
@@ -40,14 +36,14 @@
         integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://rawcdn.githack.com/OshekharO/CC-GEN/ecf4caf2fd596ef63792bef6264cf89629e32e35/Stylish-CC/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/OshekharO/CC-GEN@main/Stylish-CC/css/style.css">
     </script>
    
 </head>
 <body  onload="ccgen();"  class="bg-3 text-2">
     <nav class="navbar navbar-expand-lg navbar-dark bg-1 sticky-top">
     <a class="navbar-brand" href="index.html">
-        <img src="https://rawcdn.githack.com/ANON5EC/Source-Bin-CC-GEN/1c53f80a8c845db45ff215cfd3243f7b7b2a2915/img/sourecbincc_logo.png" alt="Source[BIN]cc" style="height: 1.6em;">
+        <img src="https://cdn.jsdelivr.net/gh/ANON5EC/Source-Bin-CC-GEN@master/img/sourecbincc_logo.png" alt="Source[BIN]cc" style="height: 1.6em;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -201,8 +197,8 @@
         integrity="sha256-/ijcOLwFf26xEYAjW75FizKVo5tnTYiQddPZoLUHHZ8=" crossorigin="anonymous"></script>
     <script src="https:///cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
-    <script defer src="https://rawcdn.githack.com/OshekharO/CC-GEN/ecf4caf2fd596ef63792bef6264cf89629e32e35/Stylish-CC/js/script.js"></script>
-        <script defer src="https://rawcdn.githack.com/OshekharO/CC-GEN/ecf4caf2fd596ef63792bef6264cf89629e32e35/Stylish-CC/js/bin_generator.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/gh/OshekharO/CC-GEN@main/Stylish-CC/js/script.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/gh/OshekharO/CC-GEN@main/Stylish-CC/js/bin_generator.js"></script>
             </body>
 
 </html>
